# llm_twin

./: README.md  docker-compose.yml  pyproject.toml
configs/: generate_instruct_dataset.yaml
llm_engineering/: settings.py
llm_engineering/application/crawlers/: __init__.py  base.py  dispatcher.py  github.py  medium.py
llm_engineering/application/networks/: embeddings.py
llm_engineering/application/preprocessing/: dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: chunking.py
llm_engineering/domain/: __init__.py  documents.py  types.py
llm_engineering/domain/base/: nosql.py  vector.py
llm_engineering/infrastructure/db/: mongo.py
pipelines/: generate_datasets.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
tools/: run.py
tools/notebooks/: dpo_instruction_triplets_creation.ipynb  instruction_pair_creation_simple.ipynb
